imported/w3c/web-platform-tests/html/semantics/text-level-semantics/the-a-element/a-download-click-404.html times out with async policy delegates https://bugs.webkit.org/show_bug.cgi?id=183297

Patch by Ali Juma <ajuma@chromium.org> on 2018-03-05
Reviewed by Chris Dumez.

Source/WebCore:

When a FrameLoader's policy document loader is cleared after receiving a navigation policy decision
to not continue loading, we still need to trigger a check for load completion, since this loader or
an ancestor loader may have been in state isLoadingInAPISense only because of the existence of
the just-cleared policy document loader. Without triggering this check, these loaders may never
call WebFrameLoaderClient::dispatchDidFinishLoad.

Test: http/wpt/html/semantics/text-level-semantics/the-a-element/a-download-click-404.html

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::continueLoadAfterNavigationPolicy):

LayoutTests:

Add layout test coverage. Copy expectations from the existing sync-policy version of the test.

* http/wpt/html/semantics/text-level-semantics/the-a-element/a-download-click-404-expected.txt: Added.
* http/wpt/html/semantics/text-level-semantics/the-a-element/a-download-click-404.html: Added.
* http/wpt/html/semantics/text-level-semantics/the-a-element/resources/a-download-404.html: Added.
* platform/ios-wk2/http/wpt/html/semantics/text-level-semantics/the-a-element/a-download-click-404-expected.txt: Added.
* platform/mac-wk1/http/wpt/html/semantics/text-level-semantics/the-a-element/a-download-click-404-expected.txt: Added.
* platform/win/http/wpt/html/semantics/text-level-semantics/the-a-element/a-download-click-404-expected.txt: Added.
* platform/wpe/TestExpectations:

Canonical link: https://commits.webkit.org/199002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229286 268f45cc-cd09-0410-ab3c-d52691b4dbfc